# whodex

./: .gitignore  .importlinter  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/superpowers/plans/: 2026-06-01-phase-0-walking-skeleton.md  2026-06-01-phase-1-overview.md  2026-06-01-phase-1a-engine.md  2026-06-01-phase-1b-durable-obsidian-read.md  2026-06-01-phase-1c-graph.md  2026-06-01-phase-1d-writeback.md  2026-06-01-phase-1e-google.md  2026-06-01-phase-1f-ingestion-api.md  2026-06-01-phase-1g-tui.md  2026-06-01-phase-1h-firefox.md  2026-06-02-phase-2-push-notifiers.md
extension/: README.md  manifest.json  package.json
extension/src/: background.js  content.js  extract.js  options.html  options.js  post.js
extension/test/: extract.test.js  post.test.js
fixtures/people-network-min/Events/: Demo Meetup.md
fixtures/people-network-min/Locations/: Berlin.md  Hamburg.md
src/whodex/: __init__.py
tests/: conftest.py  test_builders.py  test_e2e_phase0.py  test_e2e_phase1b.py  test_e2e_phase1c.py  test_e2e_phase1d.py  test_e2e_phase1e.py  test_e2e_phase1f.py  test_e2e_phase1g.py  test_smoke.py
tests/cli/: test_durable.py  test_queue.py  test_serve.py  test_sync.py  test_token.py  test_who_at.py
tests/config/: test_settings.py
tests/domain/: test_canonical.py  test_clock.py  test_events.py  test_fields.py  test_identity.py  test_ids.py  test_refs.py  test_reminder.py  test_state.py
tests/engine/: test_freshness.py  test_graph.py  test_queue.py  test_reminders.py  test_score_inputs.py  test_scoring.py
tests/facade/: test_notifications.py  test_serve.py  test_whodex.py
tests/ingestion/: test_auth.py  test_ingest.py
tests/notifiers/: test_dispatch.py
tests/projection/: test_conflict.py  test_edges.py  test_project.py
tests/sources/: test_fake.py  test_linkedin_ext.py  test_obsidian.py  test_source_contract.py
tests/store/: derived_store_contract.py  edge_store_contract.py  entity_store_contract.py  notification_store_contract.py  projection_store_contract.py  store_contract.py  sync_token_store_contract.py  test_derived_store.py  test_edge_memory.py  test_edge_sqlite.py  test_entity_memory.py  test_entity_sqlite.py  test_jsonl_mirror.py  test_memory.py  test_projection_memory.py  test_projection_sqlite.py  test_sqlite.py  test_sync_token_memory.py  test_sync_token_sqlite.py  test_token_memory.py  test_token_sqlite.py  test_vault_state_memory.py  test_vault_state_sqlite.py  token_store_contract.py  vault_state_contract.py
tests/sync/: test_echo_suppression.py  test_engine.py  test_engine_graph.py  test_hub.py  test_identity_durable.py  test_identity_property.py  test_resolve.py  test_writeback_wiring.py
tests/tui/: test_app.py  test_screens.py
tests/vault/: test_hashing.py  test_markdown.py  test_render.py  test_routing.py  test_writeback.py
(+60 files in other folders)
