[project]
name = "whodex"
version = "0.0.0"
description = "Local-first people CRM over an Obsidian vault"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlmodel>=0.0.21",
    "typer>=0.12",
    "python-ulid>=2.7",
]

[project.scripts]
whodex = "whodex.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "syrupy>=4.6",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whodex"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "unit: pure-function unit tests",
    "integration: cross-component tests",
    "e2e: end-to-end golden paths",
]
